<resources>

    <string name="app_name">Flashcards</string>

    <!-- Login screen -->
    <string name="login_text">Login</string>
    <string name="login_hint">Email</string>
    <string name="password_hint">Password</string>
    <string name="forgot_password_text">Forgot password?</string>
    <string name="not_have_account">Not have account? <b>Sign up</b></string>

    <!-- Facebook things -->
    <string name="facebook_app_id">745455269837143</string>
    <string name="fb_login_protocol_scheme">fb745455269837143</string>
    <string name="facebook_client_token">d83f6b015f3f8127770ba4351c2525aa</string>

    <!-- Register screen -->
    <string name="register_text">Register</string>

    <!-- Main screen -->
    <string name="study_button_text">Study</string>
    <string name="create_button_text">Create flashcards</string>
    <string name="prepared_collections_button_text">Learn prepared collections</string>

    <!-- menu -->
    <string name="settings">Settings</string>
    <string name="sign_out">Sign out</string>

    <!-- Browse collections fragment -->
    <string name="add_new_collection">Add a new flashcards collection</string>
    <string name="creator">Creator: %1$s</string>
    <string name="words_count">Words: %1$d</string>

    <!-- Decide collection fragment -->
    <string name="decide_what_to_do">What do you want to do?</string>
    <!-- "study_button_text" on Main Screen -->
    <string name="modify_flashcards_button_text">Modify flashcards</string>
    <string name="share_with_friends_button_text">Share with friends</string>

    <!-- Which flashcards fragment -->
    <string name="which_flashcards_text">Which flashcards do you want to modify?</string>
    <string name="all_option_text">All</string>
    <string name="learned_option_text">Learned</string>
    <string name="unlearned_option_text">Unlearned</string>

    <!-- Create name fragment-->
    <string name="choose_flashcards_name">Choose your flashcard collection name</string>
    <string name="input_text_hint">name</string>
    <string name="create_collection_button_text">Create collection</string>

    <!-- Flashcards List -->
    <string name="add_new_flashcard">Add a new flashcard</string>

    <!-- Create flashcard fragment -->
    <string name="create_flashcard_button_text">Create the flashcard</string>
    <string name="modify_flashcard_button_text">Modify the flashcard</string>
    <string name="term_text_hint">Term</string>
    <string name="definition_text_hint">Definition</string>
    <string name="enter_flashcard_term_helper_text">Enter the term</string>
    <string name="enter_flashcard_definition_helper_text">Enter the definition</string>

    <!-- what to do options -->
    <string name="delete_flashcard_option">delete</string>
    <string name="modify_flashcard_option">modify</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>