<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragments.CreateFlashcardFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/term_text_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:layout_marginHorizontal="16dp"
            android:hint="@string/term_text_hint"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toTopOf="@id/definition_text_input"
            app:startIconDrawable="@drawable/ic_flashcard_name"
            app:endIconMode="clear_text"
            app:helperText="@string/enter_flashcard_term_helper_text"
            app:errorTextColor="@color/error_color"
            app:errorIconTint="@color/error_color">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/definition_text_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="36dp"
            android:layout_marginHorizontal="16dp"
            android:hint="@string/definition_text_hint"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toTopOf="@id/add_flashcard_button"
            app:startIconDrawable="@drawable/ic_flashcard_name"
            app:endIconMode="clear_text"
            app:helperText="@string/enter_flashcard_definition_helper_text"
            app:errorTextColor="@color/error_color"
            app:errorIconTint="@color/error_color">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/add_flashcard_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/button_roundstyle"
            android:layout_marginBottom="240dp"
            android:layout_marginHorizontal="10dp"
            android:padding="16dp"
            android:textSize="26dp"
            android:textAppearance="?attr/textAppearanceHeadline5"
            android:text="@string/create_flashcard_button_text"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>