<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="16dp"
    tools:context=".fragments.WhichFlashcardsFragment">

    <TextView
        android:id="@+id/choose_option_text"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:layout_marginTop="100dp"
        android:padding="16dp"
        android:textColor="@color/black"
        android:text="@string/which_flashcards_text"
        style="@style/TextAppearance.MaterialComponents.Headline4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <Button
        android:id="@+id/all_flashcards_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginHorizontal="16dp"
        android:textAppearance="?attr/textAppearanceHeadline5"
        android:background="@drawable/button_roundstyle"
        android:paddingVertical="10dp"
        android:textSize="30sp"
        android:text="@string/all_option_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/choose_option_text"/>

    <Button
        android:id="@+id/learned_flashcards_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:textAppearance="?attr/textAppearanceHeadline5"
        android:background="@drawable/button_roundstyle"
        android:paddingVertical="10dp"
        android:textSize="30sp"
        android:text="@string/learned_option_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/all_flashcards_button"/>

    <Button
        android:id="@+id/unlearned_flashcards_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:textAppearance="?attr/textAppearanceHeadline5"
        android:background="@drawable/button_roundstyle"
        android:paddingVertical="10dp"
        android:textSize="30sp"
        android:text="@string/unlearned_option_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/learned_flashcards_button"/>

</androidx.constraintlayout.widget.ConstraintLayout>