<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context="fragments.DecideCollectionFragment">

    <TextView
        android:id="@+id/collection_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textColor="@color/black"
        android:layout_marginTop="80dp"
        style = "@style/TextAppearance.MaterialComponents.Headline3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="Top Gun"/>

    <TextView
        android:id="@+id/decide_what_to_do_textview"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/decide_what_to_do"
        style="@style/TextAppearance.MaterialComponents.Headline5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/collection_name" />

    <Button
        android:id="@+id/study_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginHorizontal="16dp"
        android:textAppearance="?attr/textAppearanceHeadline5"
        android:background="@drawable/button_roundstyle"
        android:paddingVertical="10dp"
        android:textSize="30sp"
        android:text="@string/study_button_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/decide_what_to_do_textview"/>

    <Button
        android:id="@+id/modify_flashcards_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:textAppearance="?attr/textAppearanceHeadline5"
        android:background="@drawable/button_roundstyle"
        android:paddingVertical="10dp"
        android:textSize="30sp"
        android:text="@string/modify_flashcards_button_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/study_button"/>

    <Button
        android:id="@+id/share_with_friends_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:textAppearance="?attr/textAppearanceHeadline5"
        android:background="@drawable/button_roundstyle"
        android:paddingVertical="10dp"
        android:textSize="30sp"
        android:text="@string/share_with_friends_button_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/modify_flashcards_button"/>

</androidx.constraintlayout.widget.ConstraintLayout>